--- a/src/generator/Generator.html
+++ b/src/generator/Generator.html
@@ -19,6 +19,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<link type="text/css" rel="stylesheet" href="./Generator.css" />
+		<link type="text/css" rel="stylesheet" href="../gwt/clean.css" />
 		<title>QR Code Generator from the ZXing Project</title>
 	</head>
 
