--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
 						with a camera phone. These QR Codes can contain a URL, contact
 						information, a calendar event, and much more.</p>
 					<p>
+						This site also features a <a href="./decoder/decode.html">barcode scanning implementation</a>.
+					</p>
+					<p>
 						The <a href="https://github.com/zxing/zxing/">ZXing Project</a> exists
 						to provide an open source barcode scanner for a range of devices.</p>
 				</td>
