feat: Convert templates to components

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 						with a camera phone. These QR Codes can contain a URL, contact
 						information, a calendar event, and much more.</p>
 					<p>
-						This site also features a <a href="./decoder/decode.html">barcode scanning implementation</a>.
+						This site also features a <a href="./decoder/">barcode scanning implementation</a>.
 					</p>
 					<p>
 						The <a href="https://github.com/zxing/zxing/">ZXing Project</a> exists
