--- a/src/generator/index.html
+++ b/src/generator/index.html
@@ -18,14 +18,12 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<link type="text/css" rel="stylesheet" href="./Generator.css" />
+		<link type="text/css" rel="stylesheet" href="./style.css" />
 		<link type="text/css" rel="stylesheet" href="../gwt/clean.css" />
 		<title>QR Code Generator from the ZXing Project</title>
 	</head>
 
 	<body>
-		<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex="-1"
-			style="position:absolute;width:0;height:0;border:0"></iframe>
 		<noscript>
 			<div
 				style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
@@ -45,6 +43,8 @@
 		<div id="footer">
 			<a href="https://github.com/zxing/zxing/">ZXing Project Home Page</a>
 		</div>
+
+		<script type="module" src="./index.tsx"></script>
 
 	</body>
 
