--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 				<td style="vertical-align:top;padding:4px;margin:8px">
 					<p>Welcome to the Zebra Crossing site at zxing.appspot.com.</p>
 					<p>
-						This site features a <a href="./generator/Generator.html">QR Code Generator</a>, which
+						This site features a <a href="./generator/">QR Code Generator</a>, which
 						allows you to create a two-dimensional barcode that can be scanned
 						with a camera phone. These QR Codes can contain a URL, contact
 						information, a calendar event, and much more.</p>
